# jinn_imageviewer

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  Visual Studio 编译指南.md  build.ps1  build.rs  build_exe.bat  register.bat  rustfmt.toml  unregister.bat
src/: app.rs  config.rs  i18n.rs  image.rs  ipc.rs  lib.rs  main.rs  shortcuts.rs  sorting.rs  theme.rs  ui.rs
tests/: integration_tests.rs
