[package]
name = "jinn-imageviewer"
version = "0.1.0"
edition = "2021"

[lib]
name = "jinn_imageviewer"
path = "src/lib.rs"

[[bin]]
name = "jinn-imageviewer"
path = "src/main.rs"

[dependencies]
eframe = "0.31"
image = "0.25"
rfd = "0.15"
raw-window-handle = "0.6"
open = "5.0"
chrono = "0.4"
kamadak-exif = "0.5"
trash = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_Security"] }

[build-dependencies]
winres = "0.1"
chrono = "0.4"
